got it to compile. will finish later